CloudFormation_Create_Contrail_SC.json
{
  "AWSTemplateFormatVersion" : "2010-09-09",

  "Description" : "CloudFormation template for creating a single EC2 instance with public connectivity and copy contrail-install-packages",

  "Parameters" : {
    
    "KeyPairName" : {
      "Description" : "Name of an existing EC2 KeyPair (find or create here: https://console.aws.amazon.com/ec2/v2/home#KeyPairs: )",
      "Type" : "String",
      "MinLength": "1",
      "MaxLength": "64",
      "AllowedPattern" : "[-_ a-zA-Z0-9]*",
      "ConstraintDescription" : "can contain only alphanumeric characters, spaces, dashes and underscores."
    },

    "VolumeSize" : {
      "Description" : "The size of the EBS volume to attach",
      "Type" : "Number",
      "Default" : "100"
    },

    "ServerAccess" : {
      "Description" : "CIDR IP range allowed to login to the Contrail instance",
      "Type" : "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default" : "0.0.0.0/0",
      "AllowedPattern" : "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription" : "must be a valid CIDR range of the form x.x.x.x/x."
    }
    
  },

  "Mappings" : {
    "SubnetConfig" : {
      "VPC"     : { "CIDR" : "10.44.0.0/16" },
      "Public"  : { "CIDR" : "10.44.0.0/24" },
      "Private" : { "CIDR" : "10.44.1.0/24" }
    },
    "RegionMap" : {
      "us-west-1"      : { "AMI" : "ami-b2148dd2" },
      "us-west-2"      : { "AMI" : "ami-b2148dd2" },
      "eu-west-1"      : { "AMI" : "ami-b2148dd2" }
    }
  },

  "Resources" : {

    "VPC" : {
      "Type" : "AWS::EC2::VPC",
      "Description" : "Creating a VPC",
      "Properties" : {
        "CidrBlock" : { "Fn::FindInMap" : [ "SubnetConfig", "VPC", "CIDR" ]},
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Public" },
    { "Key" : "Name", "Value" : "Contrail VPC" }
        ]
      }
    },

    "PublicSubnet" : {
      "DependsOn" : ["VPC"],
      "Type" : "AWS::EC2::Subnet",
      "Description" : "Creating a Subnet from VPC",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "CidrBlock" : { "Fn::FindInMap" : [ "SubnetConfig", "Public", "CIDR" ]},
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Public" },
    { "Key" : "Name", "Value" : "Public Subnet" }
        ]
      }
    },

    "InternetGateway" : {
      "Type" : "AWS::EC2::InternetGateway",
      "Description" : "Creating a InternetGW to allow traffic out to internet",
      "Properties" : {
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Public" }
        ]
      }
    },

    "GatewayToInternet" : {
       "DependsOn" : ["VPC", "InternetGateway"],
       "Type" : "AWS::EC2::VPCGatewayAttachment",
       "Properties" : {
         "VpcId" : { "Ref" : "VPC" },
         "InternetGatewayId" : { "Ref" : "InternetGateway" }
       }
    },

    "PublicRouteTable" : {
      "DependsOn" : ["VPC"],
      "Type" : "AWS::EC2::RouteTable",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Public" }
        ]
      }
    },

    "PublicRoute" : {
      "DependsOn" : ["PublicRouteTable", "InternetGateway"],
      "Type" : "AWS::EC2::Route",
      "Properties" : {
        "RouteTableId" : { "Ref" : "PublicRouteTable" },
        "DestinationCidrBlock" : "0.0.0.0/0",
        "GatewayId" : { "Ref" : "InternetGateway" }
      }
    },

    "PublicSubnetRouteTableAssociation" : {
      "DependsOn" : ["PublicSubnet", "PublicRouteTable"],
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PublicSubnet" },
        "RouteTableId" : { "Ref" : "PublicRouteTable" }
      }
    },

    "PrivateSubnet" : {
      "DependsOn" : ["VPC"],
      "Type" : "AWS::EC2::Subnet",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "CidrBlock" : { "Fn::FindInMap" : [ "SubnetConfig", "Private", "CIDR" ]},
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Private" },
    { "Key" : "Name", "Value" : "Private Subnet" }
        ]
      }
    },

    "PrivateRouteTable" : {
      "DependsOn" : ["VPC"],
      "Type" : "AWS::EC2::RouteTable",
      "Properties" : {
        "VpcId" : { "Ref" : "VPC" },
        "Tags" : [
          { "Key" : "Application", "Value" : { "Ref" : "AWS::StackName" } },
          { "Key" : "Network", "Value" : "Private" }
        ]
      }
    },

    "PrivateRoute" : {
      "DependsOn" : ["PrivateRouteTable", "NAT"],
      "Type" : "AWS::EC2::Route",
      "Properties" : {
        "RouteTableId" : { "Ref" : "PrivateRouteTable" },
        "DestinationCidrBlock" : "0.0.0.0/0",
        "InstanceId" : { "Ref" : "NAT" }
      }
    },

    "PrivateSubnetRouteTableAssociation" : {
      "DependsOn" : ["PrivateSubnet", "PrivateRouteTable"],
      "Type" : "AWS::EC2::SubnetRouteTableAssociation",
      "Properties" : {
        "SubnetId" : { "Ref" : "PrivateSubnet" },
        "RouteTableId" : { "Ref" : "PrivateRouteTable" }
      }
    },
    
    "VMSecurityGroup" : {
      "DependsOn" : ["VPC"],
      "Type" : "AWS::EC2::SecurityGroup",
      "Properties" : {
        "GroupDescription" : "VM Security Group",
        "VpcId" : { "Ref" : "VPC" },
  "SecurityGroupIngress" : [{
            "IpProtocol" : "tcp",
            "FromPort" : "22",
            "ToPort" : "22",
            "CidrIp" : { "Ref" : "ServerAccess" }
        },{
            "IpProtocol" : "tcp",
            "FromPort" : "3389",
            "ToPort" : "33197",
            "CidrIp" : { "Ref" : "ServerAccess" }
        }],
  "Tags" : [
    { "Key" : "Name", "Value" : "VM Security Group" }
        ]
      }
    },

    "VMSecurityGroupIngress1" : {
      "DependsOn" : ["VMSecurityGroup"],
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
  "GroupId": { "Ref": "VMSecurityGroup" },
  "IpProtocol": "tcp",
  "FromPort": "80",
  "ToPort": "80",
  "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
      }
    },

    "VMSecurityGroupIngress2" : {
          "DependsOn" : ["VMSecurityGroup"],
          "Type": "AWS::EC2::SecurityGroupIngress",
          "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "11211",
    "ToPort": "11211",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress3" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "6379",
    "ToPort": "6379",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress4" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "9100",
    "ToPort": "9110",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress5" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "9292",
    "ToPort": "9292",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress6" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "5900",
    "ToPort": "5999",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress7" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "9999",
    "ToPort": "9999",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },
      
      "VMSecurityGroupIngress8" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "111",
    "ToPort": "111",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress9" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "8000",
    "ToPort": "8200",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },
      
      "VMSecurityGroupIngress10" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "61620",
    "ToPort": "61620",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress11" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "179",
    "ToPort": "179",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress12" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "5269",
    "ToPort": "5269",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      }, 

      "VMSecurityGroupIngress13" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "53",
    "ToPort": "53",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },                

      "VMSecurityGroupIngress14" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "3000",
    "ToPort": "3000",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress15" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "7000",
    "ToPort": "7000",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },                      
      
      "VMSecurityGroupIngress16" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "15672",
    "ToPort": "15672",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },  
      
      "VMSecurityGroupIngress17" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "3002",
    "ToPort": "3002",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },      
      
      "VMSecurityGroupIngress18" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "48346",
    "ToPort": "48346",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },     
      
      "VMSecurityGroupIngress19" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "35357",
    "ToPort": "35357",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress20" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "36893",
    "ToPort": "36893",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },      
      
      "VMSecurityGroupIngress21" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "7199",
    "ToPort": "7199",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress22" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "5920",
    "ToPort": "5940",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },     
      
      "VMSecurityGroupIngress23" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "9696",
    "ToPort": "9696",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },   

      "VMSecurityGroupIngress24" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "9697",
    "ToPort": "9697",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress25" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "45251",
    "ToPort": "45251",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress26" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "8774",
    "ToPort": "8777",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress27" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "9160",
    "ToPort": "9192",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress28" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "5672",
    "ToPort": "5672",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress29" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "5000",
    "ToPort": "5000",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },
      
      "VMSecurityGroupIngress30" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "25672",
    "ToPort": "25672",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress31" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "3306",
    "ToPort": "3306",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress32" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "6379",
    "ToPort": "6379",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },      
      
      "VMSecurityGroupIngress33" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "111",
    "ToPort": "111",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },               
      
      "VMSecurityGroupIngress34" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "80",
    "ToPort": "80",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },    
      
      "VMSecurityGroupIngress35" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "4369",
    "ToPort": "4369",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },       
      
      "VMSecurityGroupIngress36" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "9042",
    "ToPort": "9091",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },      
      
      "VMSecurityGroupIngress37" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "22",
    "ToPort": "22",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },     
      
      "VMSecurityGroupIngress38" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "8443",
    "ToPort": "8444",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress39" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "9311",
    "ToPort": "9312",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress40" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "45027",
    "ToPort": "45027",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },           
      
      "VMSecurityGroupIngress41" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "45764",
    "ToPort": "45764",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },                           
      
      "VMSecurityGroupIngress42" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "2181",
    "ToPort": "2181",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress43" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "8085",
    "ToPort": "8102",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress44" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "889",
    "ToPort": "889",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress45" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "42595",
    "ToPort": "42595",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },

      "VMSecurityGroupIngress46" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "tcp",
    "FromPort": "16509",
    "ToPort": "16509",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },
      
      "VMSecurityGroupIngress47" : {
        "DependsOn" : ["VMSecurityGroup"],
        "Type": "AWS::EC2::SecurityGroupIngress",
        "Properties": {
    "GroupId": { "Ref": "VMSecurityGroup" },
    "IpProtocol": "icmp",
    "FromPort": "-1",
    "ToPort": "-1",
    "SourceSecurityGroupId": { "Ref": "VMSecurityGroup" }
        }
      },
    
    "NAT" : {
      "DependsOn" : ["PublicSubnet", "VMSecurityGroup"],
      "Type" : "AWS::EC2::Instance",
      "Properties" : {
        "InstanceType" : "t2.medium",
        "KeyName"  : { "Ref" : "KeyPairName" },
        "SourceDestCheck" : "false",
        "ImageId" : { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "AMI" ]},
  "NetworkInterfaces" : [{
          "GroupSet"                 : [{ "Ref" : "VMSecurityGroup" }],
          "AssociatePublicIpAddress" : "true",
          "DeviceIndex"              : "0",
          "DeleteOnTermination"      : "true",
          "SubnetId"                 : { "Ref" : "PublicSubnet" }
        }],
  "Tags" : [
    { "Key" : "Name", "Value" : "NAT" }
        ],
  "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
    "#!/bin/bash\n",
      "export DEBIAN_FRONTEND=noninteractive\n",
      "apt-get update\n",
      "apt-get -y install python-setuptools\n",
      "apt-get -y install tree\n",
      "wget -P /root/ https://s3-us-west-1.amazonaws.com/contrail-install-packages/contrail-install-packages_3.2.3.0-38-ubuntu-14-04mitaka_all.deb\n",
      "dpkg -i /root/contrail-install-packages_3.2.3.0-38-ubuntu-14-04mitaka_all.deb\n",
      "cd /opt/contrail/contrail_packages;   ./setup.sh\n",
      "easy_install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz\n",
      "/usr/local/bin/cfn-init --stack ", { "Ref":"AWS::StackName" }, " --resource NAT", " --region ", { "Ref": "AWS::Region" }, "\n",
  ]]}}
      }
    },

    "Controller01" : {
      "DependsOn" : ["PublicSubnet"],
      "Type" : "AWS::EC2::Instance",
      "Properties" : {
        "InstanceType" : "t2.large",
        "KeyName"  : { "Ref" : "KeyPairName" },
        "SourceDestCheck" : "false",
        "ImageId" : { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "AMI" ]},
  "NetworkInterfaces" : [{
          "GroupSet"                 : [{ "Ref" : "VMSecurityGroup" }],
          "AssociatePublicIpAddress" : "true",
          "DeviceIndex"              : "0",
          "DeleteOnTermination"      : "true",
          "SubnetId"                 : { "Ref" : "PublicSubnet" }
        }],
  "Tags" : [
    { "Key" : "Name", "Value" : "Controller01" }
        ],
  "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
    "#!/bin/bash\n",
      "export DEBIAN_FRONTEND=noninteractive\n",
      "apt-get update\n",
      "apt-get -y install tree\n",
  ]]}}
      }
    },

    "Controller02" : {
      "Type" : "AWS::EC2::Instance",
      "Properties" : {
        "InstanceType" : "t2.large",
        "KeyName"  : { "Ref" : "KeyPairName" },
        "SourceDestCheck" : "false",
        "ImageId" : { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "AMI" ]},
  "NetworkInterfaces" : [{
          "GroupSet"                 : [{ "Ref" : "VMSecurityGroup" }],
          "AssociatePublicIpAddress" : "false",
          "DeviceIndex"              : "0",
          "DeleteOnTermination"      : "true",
          "SubnetId"                 : { "Ref" : "PrivateSubnet" }
        }],
  "Tags" : [
    { "Key" : "Name", "Value" : "Controller02" }
        ],
  "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
    "#!/bin/bash\n",
      "export DEBIAN_FRONTEND=noninteractive\n",
      "apt-get update\n",
      "apt-get -y install tree\n",
  ]]}}
      }
    },

    "Controller03" : {
      "Type" : "AWS::EC2::Instance",
      "Properties" : {
        "InstanceType" : "t2.large",
        "KeyName"  : { "Ref" : "KeyPairName" },
        "SourceDestCheck" : "false",
        "ImageId" : { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "AMI" ]},
  "NetworkInterfaces" : [{
          "GroupSet"                 : [{ "Ref" : "VMSecurityGroup" }],
          "AssociatePublicIpAddress" : "false",
          "DeviceIndex"              : "0",
          "DeleteOnTermination"      : "true",
          "SubnetId"                 : { "Ref" : "PrivateSubnet" }
        }],
  "Tags" : [
    { "Key" : "Name", "Value" : "Controller03" }
        ],
  "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
    "#!/bin/bash\n",
      "export DEBIAN_FRONTEND=noninteractive\n",
      "apt-get update\n",
      "apt-get -y install tree\n",
  ]]}}
      }
    },

    "compute01" : {
      "Type" : "AWS::EC2::Instance",
      "Properties" : {
        "InstanceType" : "t2.large",
        "KeyName"  : { "Ref" : "KeyPairName" },
        "SourceDestCheck" : "false",
        "ImageId" : { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "AMI" ]},
  "NetworkInterfaces" : [{
          "GroupSet"                 : [{ "Ref" : "VMSecurityGroup" }],
          "AssociatePublicIpAddress" : "false",
          "DeviceIndex"              : "0",
          "DeleteOnTermination"      : "true",
          "SubnetId"                 : { "Ref" : "PrivateSubnet" }
        }],
  "Tags" : [
    { "Key" : "Name", "Value" : "compute01" }
        ],
  "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
    "#!/bin/bash\n",
      "export DEBIAN_FRONTEND=noninteractive\n",
      "apt-get update\n",
      "apt-get -y install tree\n",
  ]]}}
      }
    },

    "compute02" : {
      "Type" : "AWS::EC2::Instance",
      "Properties" : {
        "InstanceType" : "t2.large",
        "KeyName"  : { "Ref" : "KeyPairName" },
        "SourceDestCheck" : "false",
        "ImageId" : { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "AMI" ]},
  "NetworkInterfaces" : [{
          "GroupSet"                 : [{ "Ref" : "VMSecurityGroup" }],
          "AssociatePublicIpAddress" : "false",
          "DeviceIndex"              : "0",
          "DeleteOnTermination"      : "true",
          "SubnetId"                 : { "Ref" : "PrivateSubnet" }
        }],
  "Tags" : [
    { "Key" : "Name", "Value" : "compute02" }
        ],
  "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
    "#!/bin/bash\n",
      "export DEBIAN_FRONTEND=noninteractive\n",
      "apt-get update\n",
      "apt-get -y install tree\n",
  ]]}}
      }
    },

    "compute03" : {
      "Type" : "AWS::EC2::Instance",
      "Properties" : {
        "InstanceType" : "t2.large",
        "KeyName"  : { "Ref" : "KeyPairName" },
        "SourceDestCheck" : "false",
        "ImageId" : { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "AMI" ]},
  "NetworkInterfaces" : [{
          "GroupSet"                 : [{ "Ref" : "VMSecurityGroup" }],
          "AssociatePublicIpAddress" : "false",
          "DeviceIndex"              : "0",
          "DeleteOnTermination"      : "true",
          "SubnetId"                 : { "Ref" : "PrivateSubnet" }
        }],
  "Tags" : [
    { "Key" : "Name", "Value" : "compute03" }
        ],
  "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
    "#!/bin/bash\n",
      "export DEBIAN_FRONTEND=noninteractive\n",
      "apt-get update\n",
      "apt-get -y install tree\n",
  ]]}}
      }
    },

    "ctrl1vol" : {
      "Type" : "AWS::EC2::Volume",
      "Properties" : {
        "Size" : "100",
        "AvailabilityZone" : { "Fn::GetAtt" : [ "Controller01", "AvailabilityZone" ]},
        "Tags" : [
          { 
            "Key" : "Name",
            "Value" : {"Ref" : "AWS::StackName"} 
          }
        ]
      }
    },
    "MountPoint" : {
      "Type" : "AWS::EC2::VolumeAttachment",
      "Properties" : {
        "InstanceId" : {"Ref" : "Controller01"},
        "VolumeId" : {"Ref" : "ctrl1vol"},
        "Device" : "/dev/sdb"
      }
    },

  }
}
